--- a/html/src/scss/style.scss
+++ b/html/src/scss/style.scss
@@ -1,6 +1,8 @@
 // If you want to override variables do it here
-@import "variables";
+@import 'variables';
 
 // If you want to add something do it here
-@import "custom";
+@import 'custom';
 
+@import 'layout';
+@import 'components/all';
